--- a/AndroidStudioProjects/MonChicken2/app/src/main/res/layout/activity_main.xml
+++ b/AndroidStudioProjects/MonChicken2/app/src/main/res/layout/activity_main.xml
@@ -24,4 +24,15 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="32dp" />
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView"
+        android:layout_below="@+id/name"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="53dp"
+        android:layout_marginStart="53dp"
+        android:layout_marginTop="69dp" />
+
 </RelativeLayout>
